deploy: a7293599314f61a5111952d1742a9f3cea0df921

--- a/generic/index.html
+++ b/generic/index.html
@@ -719,9 +719,7 @@ clipboard.on('error', function(e) {
     console.log(e);
 });
 </script>
-<h1 id='introduction'>Introduction</h1>
-<p>APIs for Predict Products</p>
-<h2 id='general-information'>General information</h2>
+<h1 id='introduction'>Introduction</h1><h2 id='general-information'>General information</h2>
 <ul>
 <li>Phemex provides HTTP Rest API for client to operate Orders, all endpoints return a JSON object.</li>
 <li>The default Rest API base endpoint is: <strong>https://api.phemex.com</strong>. The High rate limit Rest API base endpoint is: <strong>https://vapi.phemex.com</strong>. Or for the testnet is:  <strong>https://testnet-api.phemex.com</strong> </li>
