deploy: fbc80aa36cdabcefefee7ecf9b2235780b57d9aa

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
       gtag('config', 'UA-158616893-1');
     </script>
 
-    <link href="../images/favicon-8cb6aab0.ico" rel="icon" type="image/ico" />
+    <link href="images/favicon-8cb6aab0.ico" rel="icon" type="image/ico" />
     <meta charset="utf-8">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>Phemex API Docs</title>
+    <title>Phemex API Reference</title>
 
     <style>
       .highlight table td { padding: 5px; }
@@ -635,9 +635,9 @@
   color: #859900;
 }
     </style>
-    <link href="../stylesheets/screen-952b4996.css" rel="stylesheet" media="screen" />
-    <link href="../stylesheets/print-41ffbffc.css" rel="stylesheet" media="print" />
-      <script src="../javascripts/all-52d563e0.js"></script>
+    <link href="stylesheets/screen-952b4996.css" rel="stylesheet" media="screen" />
+    <link href="stylesheets/print-41ffbffc.css" rel="stylesheet" media="print" />
+      <script src="javascripts/all-52d563e0.js"></script>
     <script>
       $(function() { setupCodeCopy(); });
     </script>
@@ -648,13 +648,11 @@
   <!-- Navigation bar START -->
   <header class="top-nav">
     <div class="top-menu">
-        <a href="" class="logo-link" target="_self">
-          <img src="../images/logo-e10cba0f.svg" class="logo" alt="" />
-        </a>
+        <img src="images/logo-e10cba0f.svg" class="logo" alt="" />
 
       <ul class="con">
          <!-- GENERIC -->
-           <li><a href="/generic" class="selected">Generic Info</a></li>
+           <li><a href="/generic">Generic Info</a></li>
 
          <!-- Contract -->
            <li><a href="/contract">Contract</a></li>
@@ -670,17 +668,14 @@
 
 
 
-  <body class="generic generic_index" data-languages="[&quot;java&quot;]">
+  <body class="index" data-languages="[]">
     <a href="#" id="nav-button">
       <span>
         NAV
-        <img src="../images/navbar-cad8cdcb.png" alt="" />
+        <img src="images/navbar-cad8cdcb.png" alt="" />
       </span>
     </a>
     <div class="toc-wrapper">
-        <div class="lang-selector">
-              <a href="#" data-language-name="java">java</a>
-        </div>
         <div class="search">
           <input type="text" class="search" id="input-search" placeholder="Search">
         </div>
@@ -695,31 +690,11 @@
               </ul>
           </li>
       </ul>
-        <ul class="toc-footer">
-            <li><a href='https://github.com/lord/slate'>Documentation Powered by Slate</a></li>
-        </ul>
     </div>
     <div class="page-wrapper">
       <div class="dark-box"></div>
       <div class="content">
-        <!---
-Clipboard script
--->
-
-<script src="../dist/clipboard.min-f99f064d.js"></script>
-
-<script>
-var clipboard = new ClipboardJS('.clipboard_button');
-
-clipboard.on('success', function(e) {
-    console.log(e);
-});
-
-clipboard.on('error', function(e) {
-    console.log(e);
-});
-</script>
-<h1 id='introduction'>Introduction</h1><h2 id='general-api-information'>General API Information</h2>
+        <h1 id='introduction'>Introduction</h1><h2 id='general-api-information'>General API Information</h2>
 <ul>
 <li>Phemex provides HTTP Rest API for client to operate Orders, all endpoints return a JSON object.</li>
 <li>The default Rest API base endpoint is: <strong>https://api.phemex.com</strong>. The High rate limit Rest API base endpoint is: <strong>https://vapi.phemex.com</strong>. Or for the testnet is:  <strong>https://testnet-api.phemex.com</strong> </li>
@@ -753,7 +728,7 @@ clipboard.on('error', function(e) {
 
 <p>GET
 <code><span id=svAccount>/phemex-predict/order/buy</span></code>
-<button class="clipboard_button" data-clipboard-action="copy" data-clipboard-target="#svAccount"><img src="../images/copy_to_clipboard-ff25494f.png" height=15 width=15></img></button></p>
+<button class="clipboard_button" data-clipboard-action="copy" data-clipboard-target="#svAccount"><img src="images/copy_to_clipboard-ff25494f.png" height=15 width=15></img></button></p>
 
 <p class="fake_header">Request Parameters</p>
 
@@ -819,9 +794,6 @@ clipboard.on('error', function(e) {
 
       </div>
       <div class="dark-box">
-          <div class="lang-selector">
-                <a href="#" data-language-name="java">java</a>
-          </div>
       </div>
     </div>
   </body>
