--- a/zh-my/generic/index.html
+++ b/zh-my/generic/index.html
@@ -690,7 +690,7 @@
             <a href="#introduction" class="toc-h1 toc-link" data-title="Introduction">Introduction</a>
               <ul class="toc-list-h2">
                   <li>
-                    <a href="#general-information" class="toc-h2 toc-link" data-title="General information">General information</a>
+                    <a href="#general-api-information" class="toc-h2 toc-link" data-title="General API Information">General API Information</a>
                   </li>
               </ul>
           </li>
@@ -719,7 +719,7 @@ clipboard.on('error', function(e) {
     console.log(e);
 });
 </script>
-<h1 id='introduction'>Introduction</h1><h2 id='general-information'>General information</h2>
+<h1 id='introduction'>Introduction</h1><h2 id='general-api-information'>General API Information</h2>
 <ul>
 <li>Phemex provides HTTP Rest API for client to operate Orders, all endpoints return a JSON object.</li>
 <li>The default Rest API base endpoint is: <strong>https://api.phemex.com</strong>. The High rate limit Rest API base endpoint is: <strong>https://vapi.phemex.com</strong>. Or for the testnet is:  <strong>https://testnet-api.phemex.com</strong> </li>
