deploy: e15869b33759e49e24ef10577cff84e2476449c8

--- a/index.html
+++ b/index.html
@@ -690,7 +690,7 @@
                             <a href="#rest-api-rate-limit-rules" class="toc-h3 toc-link" data-title="REST API Rate Limit Rules">REST API Rate Limit Rules</a>
                           </li>
                           <li>
-                            <a href="#api-groups" class="toc-h3 toc-link" data-title="Api Groups">Api Groups</a>
+                            <a href="#api-groups" class="toc-h3 toc-link" data-title="API Groups">API Groups</a>
                           </li>
                       </ul>
                   </li>
@@ -975,7 +975,7 @@ Below headers are returned with API response. Postfix <code>-&lt;groupName&gt;</
 <td>100/minute</td>
 </tr>
 </tbody></table>
-<h4 id='api-groups'>Api Groups</h4>
+<h4 id='api-groups'>API Groups</h4>
 <ul>
 <li>Contract group
 Contract group is for contract trading, it contains following api.</li>
