deploy: 1d802d97e837157a5743f509ddb9dbfc2f152a1e

--- a/index.html
+++ b/index.html
@@ -754,7 +754,7 @@
                     <a href="#query-product-information" class="toc-h2 toc-link" data-title="Query Product Information">Query Product Information</a>
                   </li>
                   <li>
-                    <a href="#place-order-get-request-with-query-string" class="toc-h2 toc-link" data-title="Place Order (GET request with query string)">Place Order (GET request with query string)</a>
+                    <a href="#place-order-put-request-with-query-string" class="toc-h2 toc-link" data-title="Place Order (PUT request with query string)">Place Order (PUT request with query string)</a>
                   </li>
                   <li>
                     <a href="#query-order-book" class="toc-h2 toc-link" data-title="Query Order Book">Query Order Book</a>
@@ -2149,7 +2149,7 @@ Because the number of interfaces in Other group may grow over time, the list bel
 <li>Contract symbols are defined in <code>.products[]</code> with <strong>type=Perpetual</strong>.</li>
 <li>Contract risklimit information are defined in <code>.risklimit[]</code>.</li>
 </ul>
-<h2 id='place-order-get-request-with-query-string'>Place Order (GET request with query string)</h2>
+<h2 id='place-order-put-request-with-query-string'>Place Order (PUT request with query string)</h2>
 <blockquote>
 <p>Request format</p>
 </blockquote>
