deploy: b76dc695bbdc95b6be07434df79cc5abcf697c58

--- a/index.html
+++ b/index.html
@@ -2147,7 +2147,7 @@ Because the number of interfaces in Other group may grow over time, the list bel
 </code></pre></div>
 <ul>
 <li>Contract symbols are defined in <code>.products[]</code> with <strong>type=Perpetual</strong>.</li>
-<li>Contract risklimit information are defined in <code>.risklimit[]</code>.</li>
+<li>Contract risklimit information are defined in <code>.risklimits[]</code>.</li>
 </ul>
 <h2 id='place-order-put-request-with-query-string'>Place Order (PUT request with query string)</h2>
 <blockquote>
