deploy: 4b4df35442bcfd61b70648ad5b42cd674c00122a

--- a/index.html
+++ b/index.html
@@ -6465,7 +6465,7 @@ GET /spot/orders/active?symbol=&lt;symbol&gt;&amp;clOrDID=&lt;clOrdID&gt;
 </span><span class="p">}</span><span class="w">
 </span></code></pre></div>
 <ul>
-<li><code>chainName</code> is shall be queried from <a href="#query-chain-information">chain information</a>.</li>
+<li><code>chainName</code> shall be queried from <a href="#query-chain-information">chain information</a>.</li>
 </ul>
 
 <table><thead>
