deploy: a88c1fa290ad8ceee161b03a0f4452633011390a

--- a/index.html
+++ b/index.html
@@ -8287,21 +8287,21 @@ While for private channels like account/position/order data, the client should s
 <td>amountEv</td>
 <td>Long</td>
 <td>True</td>
-<td>amountEv to transfer</td>
+<td>AmountEv to transfer</td>
 <td>100000 ...</td>
 </tr>
 <tr>
 <td>moveOp</td>
 <td>Integer</td>
 <td>True</td>
-<td>direction</td>
+<td>Direction</td>
 <td>1 - futures to spot, 2 - spot to futures</td>
 </tr>
 <tr>
 <td>currency</td>
 <td>String</td>
 <td>True</td>
-<td>currency to transfer</td>
+<td>Currency to transfer</td>
 <td>BTC, ETH, USD ...</td>
 </tr>
 </tbody></table>
@@ -8340,36 +8340,36 @@ While for private channels like account/position/order data, the client should s
 <td>currency</td>
 <td>String</td>
 <td>True</td>
-<td>the currency to query</td>
+<td>The currency to query</td>
 <td>BTC,ETH ...</td>
 </tr>
 <tr>
 <td>start</td>
 <td>Long</td>
 <td>False</td>
-<td>start time in millisecond</td>
-<td>default 2 days ago from the end</td>
+<td>Start time in millisecond</td>
+<td>Default to 2 days ago from the end</td>
 </tr>
 <tr>
 <td>end</td>
 <td>Long</td>
 <td>False</td>
-<td>end time in millisecond</td>
-<td>default now</td>
+<td>End time in millisecond</td>
+<td>Default to now</td>
 </tr>
 <tr>
 <td>offset</td>
 <td>Integer</td>
 <td>False</td>
-<td>page start from 0</td>
-<td>start from 0, default 0</td>
+<td>Page start from 0</td>
+<td>Start from 0, default 0</td>
 </tr>
 <tr>
 <td>limit</td>
 <td>Integer</td>
 <td>False</td>
-<td>page size</td>
-<td>default 20, max 200</td>
+<td>Page size</td>
+<td>Default to 20, max 200</td>
 </tr>
 </tbody></table>
 <h2 id='spot-sub-to-main-transfer-for-sub-account-only'>Spot sub to main transfer (for sub-account only)</h2>
@@ -8407,21 +8407,21 @@ While for private channels like account/position/order data, the client should s
 <td>amountEv</td>
 <td>Long</td>
 <td>True</td>
-<td>amountEv to transfer</td>
+<td>AmountEv to transfer</td>
 <td>100000 ...</td>
 </tr>
 <tr>
 <td>currency</td>
 <td>String</td>
 <td>True</td>
-<td>currency to transfer</td>
+<td>Currency to transfer</td>
 <td>BTC, ETH, USD ...</td>
 </tr>
 <tr>
 <td>requestKey</td>
 <td>String</td>
 <td>False</td>
-<td>unique request key</td>
+<td>Unique request key</td>
 <td>Unique request Key, system will generate if its empty</td>
 </tr>
 </tbody></table>
@@ -8460,36 +8460,36 @@ While for private channels like account/position/order data, the client should s
 <td>currency</td>
 <td>String</td>
 <td>True</td>
-<td>the currency to query</td>
+<td>The currency to query</td>
 <td>BTC,ETH ...</td>
 </tr>
 <tr>
 <td>start</td>
 <td>Long</td>
 <td>False</td>
-<td>start time in millisecond</td>
-<td>default 2 days ago from the end</td>
+<td>Start time in millisecond</td>
+<td>Default to 2 days ago from the end</td>
 </tr>
 <tr>
 <td>end</td>
 <td>Long</td>
 <td>False</td>
-<td>end time in millisecond</td>
-<td>default now</td>
+<td>End time in millisecond</td>
+<td>Default to now</td>
 </tr>
 <tr>
 <td>offset</td>
 <td>Integer</td>
 <td>False</td>
-<td>page start from 0</td>
-<td>start from 0, default 0</td>
+<td>Page start from 0</td>
+<td>Start from 0, default 0</td>
 </tr>
 <tr>
 <td>limit</td>
 <td>Integer</td>
 <td>False</td>
-<td>page size</td>
-<td>default 20, max 200</td>
+<td>Page size</td>
+<td>Default to 20, max 200</td>
 </tr>
 </tbody></table>
 <h2 id='futures-sub-to-main-transfer-for-sub-account-only'>Futures sub to main transfer (for sub-account only)</h2>
@@ -8528,21 +8528,21 @@ While for private channels like account/position/order data, the client should s
 <td>amountEv</td>
 <td>Long</td>
 <td>True</td>
-<td>amountEv to transfer</td>
+<td>AmountEv to transfer</td>
 <td>100000 ...</td>
 </tr>
 <tr>
 <td>currency</td>
 <td>String</td>
 <td>True</td>
-<td>currency to transfer</td>
+<td>Currency to transfer</td>
 <td>BTC, ETH, USD ...</td>
 </tr>
 <tr>
 <td>requestKey</td>
 <td>String</td>
 <td>False</td>
-<td>unique request key</td>
+<td>Unique request key</td>
 <td>Unique request Key, system will generate if its empty</td>
 </tr>
 </tbody></table>
@@ -8580,36 +8580,36 @@ While for private channels like account/position/order data, the client should s
 <td>currency</td>
 <td>String</td>
 <td>True</td>
-<td>the currency to query</td>
+<td>The currency to query</td>
 <td>BTC,ETH ...</td>
 </tr>
 <tr>
 <td>start</td>
 <td>Long</td>
 <td>False</td>
-<td>start time in millisecond</td>
-<td>default 2 days ago from the end</td>
+<td>Start time in millisecond</td>
+<td>Default to 2 days ago from the end</td>
 </tr>
 <tr>
 <td>end</td>
 <td>Long</td>
 <td>False</td>
-<td>end time in millisecond</td>
-<td>default now</td>
+<td>End time in millisecond</td>
+<td>Default to now</td>
 </tr>
 <tr>
 <td>offset</td>
 <td>Integer</td>
 <td>False</td>
-<td>page start from 0</td>
-<td>start from 0, default 0</td>
+<td>Page start from 0</td>
+<td>Start from 0, default 0</td>
 </tr>
 <tr>
 <td>limit</td>
 <td>Integer</td>
 <td>False</td>
-<td>page size</td>
-<td>default 20, max 200</td>
+<td>Page size</td>
+<td>Default to 20, max 200</td>
 </tr>
 </tbody></table>
 <h2 id='universal-transfer-main-account-only-transfer-between-sub-to-main-main-to-sub-or-sub-to-sub'>Universal transfer (main account only) - transfer between sub to main, main to sub or sub to sub</h2>
@@ -8645,35 +8645,42 @@ While for private channels like account/position/order data, the client should s
 <td>fromUserId</td>
 <td>Long</td>
 <td>True</td>
-<td>from user id</td>
+<td>From user id</td>
 <td>Will set as main account if not given or 0</td>
 </tr>
 <tr>
 <td>toUserId</td>
 <td>Long</td>
 <td>True</td>
-<td>to user id</td>
+<td>To user id</td>
 <td>Will set as main account if not given or 0</td>
+</tr>
+<tr>
+<td>currency</td>
+<td>String</td>
+<td>True</td>
+<td>The currency to query</td>
+<td>BTC,ETH ...</td>
 </tr>
 <tr>
 <td>amountEv</td>
 <td>Long</td>
 <td>True</td>
-<td>amountEv to transfer</td>
+<td>AmountEv to transfer</td>
 <td>100000 ...</td>
 </tr>
 <tr>
 <td>bizType</td>
 <td>String</td>
 <td>True</td>
-<td>transfer for which biz type</td>
+<td>Transfer for which biz type</td>
 <td>SPOT, PERPETUAL</td>
 </tr>
 <tr>
 <td>requestKey</td>
 <td>String</td>
 <td>False</td>
-<td>unique request key</td>
+<td>Unique request key</td>
 <td>Unique request Key, system will generate if its empty</td>
 </tr>
 </tbody></table>
@@ -8712,21 +8719,21 @@ While for private channels like account/position/order data, the client should s
 <td>fromCurrency</td>
 <td>String</td>
 <td>True</td>
-<td>from currency</td>
+<td>From currency</td>
 <td>BTC,USD ...</td>
 </tr>
 <tr>
 <td>toCurrency</td>
 <td>String</td>
 <td>True</td>
-<td>to currency</td>
+<td>To currency</td>
 <td>BTC,USD ...</td>
 </tr>
 <tr>
 <td>fromAmountEv</td>
 <td>Long</td>
 <td>True</td>
-<td>amountEv to transfer</td>
+<td>AmountEv to transfer</td>
 <td>100000 ...</td>
 </tr>
 </tbody></table>
@@ -8768,28 +8775,28 @@ While for private channels like account/position/order data, the client should s
 <td>toCurrency</td>
 <td>String</td>
 <td>True</td>
-<td>to currency</td>
+<td>To currency</td>
 <td>BTC,USD ...</td>
 </tr>
 <tr>
 <td>fromCurrency</td>
 <td>String</td>
 <td>True</td>
-<td>from currency</td>
+<td>From currency</td>
 <td>BTC,USD ...</td>
 </tr>
 <tr>
 <td>fromAmountEv</td>
 <td>Long</td>
 <td>False</td>
-<td>amountEv to convert</td>
+<td>AmountEv to convert</td>
 <td>100000 ...</td>
 </tr>
 <tr>
 <td>code</td>
 <td>String</td>
 <td>True</td>
-<td>encrypted convert args</td>
+<td>Encrypted convert args</td>
 <td>xxxxxxxx ...</td>
 </tr>
 </tbody></table>
@@ -8829,43 +8836,43 @@ While for private channels like account/position/order data, the client should s
 <td>fromCurrency</td>
 <td>String</td>
 <td>False</td>
-<td>from currency</td>
+<td>From currency</td>
 <td>BTC,USD ...</td>
 </tr>
 <tr>
 <td>toCurrency</td>
 <td>String</td>
 <td>False</td>
-<td>to currency</td>
+<td>To currency</td>
 <td>BTC,USD ...</td>
 </tr>
 <tr>
 <td>startTime</td>
 <td>Long</td>
 <td>False</td>
-<td>start time in millisecond</td>
-<td>default 2 days ago from the end time</td>
+<td>Start time in millisecond</td>
+<td>Default to 2 days ago from the end time</td>
 </tr>
 <tr>
 <td>endTime</td>
 <td>Long</td>
 <td>False</td>
-<td>end time in millisecond</td>
-<td>default now</td>
+<td>End time in millisecond</td>
+<td>Default to now</td>
 </tr>
 <tr>
 <td>offset</td>
 <td>Integer</td>
 <td>False</td>
-<td>page start from 0</td>
-<td>start from 0, default 0</td>
+<td>Page start from 0</td>
+<td>Start from 0, default 0</td>
 </tr>
 <tr>
 <td>limit</td>
 <td>Integer</td>
 <td>False</td>
-<td>page size</td>
-<td>default 20, max 200</td>
+<td>Page size</td>
+<td>Default to 20, max 200</td>
 </tr>
 </tbody></table>
 
